fix: label overflow

--- a/packages/styles/scss/components/fluid-text-input/_fluid-text-input.scss
+++ b/packages/styles/scss/components/fluid-text-input/_fluid-text-input.scss
@@ -31,9 +31,12 @@
     top: rem(13px);
     left: $spacing-05;
     display: flex;
+    width: calc(100% - 2rem);
     height: rem(16px);
     align-items: center;
     margin: 0;
+    overflow-x: scroll;
+    white-space: nowrap;
   }
 
   .#{$prefix}--text-input--fluid .#{$prefix}--form__helper-text {
